build-logs/build-posix-pty-0.2.2.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - posix-pty-0.2.2 (lib) (first run)
 - posix-pty-0.2.2 (test:stty) (first run)
Configuring library for posix-pty-0.2.2...
Preprocessing library for posix-pty-0.2.2...
Building library for posix-pty-0.2.2...
[1 of 1] Compiling System.Posix.Pty
In file included from /usr/include/x86_64-linux-gnu/sys/ioctl.h:21,

                 from cbits/fork_exec_with_pty.c:2:0: error: 

/usr/include/features.h:194:3: error:
     warning: #warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE" [-Wcpp]
      194 | # warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE"
          |   ^~~~~~~
    |
194 | # warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE"
    |   ^
In file included from /usr/include/x86_64-linux-gnu/sys/ioctl.h:21,

                 from cbits/fork_exec_with_pty.c:2:0: error: 

/usr/include/features.h:194:3: error:
     warning: #warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE" [-Wcpp]
      194 | # warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE"
          |   ^~~~~~~
    |
194 | # warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE"
    |   ^
Configuring test suite 'stty' for posix-pty-0.2.2...
Preprocessing test suite 'stty' for posix-pty-0.2.2...
Building test suite 'stty' for posix-pty-0.2.2...
[1 of 1] Compiling Main
[2 of 2] Linking /tmp/workdir-posix-pty/posix-pty-0.2.2/dist-newstyle/build/x86_64-linux/ghc-9.6.6/posix-pty-0.2.2/t/stty/build/stty/stty
